--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
 </head>
-    <script src="script.js"></script><body>
-    
+<body>
+    <div class="container-botao">
+        <button id="btn-1">Pedra</button>
+        <button id="btn-2">Papel</button>
+        <button id="btn-3">Tesoura</button>
+    </div>
+    <script src="script.js"></script>   
 </body>
 </html>
