Output na interface
os resultados devem ser apresentados na interface
ao inves de ser apresentado no console.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container-botao">
         <button id="btn-1">Pedra</button>
         <button id="btn-2">Papel</button>
         <button id="btn-3">Tesoura</button>
+    </div>
+    <div id="resultado">
+
     </div>
     <script src="script.js"></script>   
 </body>
