--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Pedra, Papel e Tesoura</h1>
     <div class="container-botao">
         <button id="btn-1">Pedra</button>
         <button id="btn-2">Papel</button>
         <button id="btn-3">Tesoura</button>
     </div>
-    <div id="resultado">
-
+    <div id="resultado"></div>
+    <div id="regras">Regras do jogo:<br>
+        - Melhor de 5. Ou seja, quem fizer 5 pontos primeiro ganha. <br>
+        - Empate ninguem pontua <br>
+        - A escolha do computador eh gerada aleatoriamente cada rodada <br>
+        - Assim que o score de algum player atingir 5, o jogo reinicia <br>
+        - Se divirta!
     </div>
     <script src="script.js"></script>   
 </body>
